Fix links: use relative_url for CSS and recreate index with page links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,12 @@
 <nav class="main-nav">
   <ul>
     <li><a href="{{ '/' | relative_url }}">Home</a></li>
-    <li><a href="{{ '/introduction' | relative_url }}">Introduction</a></li>
-    <li><a href="{{ '/design' | relative_url }}">Design</a></li>
-    <li><a href="{{ '/implementation' | relative_url }}">Implementation</a></li>
-    <li><a href="{{ '/results' | relative_url }}">Results</a></li>
-    <li><a href="{{ '/conclusion' | relative_url }}">Conclusion</a></li>
-    <li><a href="{{ '/team' | relative_url }}">Team</a></li>
-    <li><a href="{{ '/additional-materials' | relative_url }}">Additional Materials</a></li>
+    <li><a href="{{ '/introduction/' | relative_url }}">Introduction</a></li>
+    <li><a href="{{ '/design/' | relative_url }}">Design</a></li>
+    <li><a href="{{ '/implementation/' | relative_url }}">Implementation</a></li>
+    <li><a href="{{ '/results/' | relative_url }}">Results</a></li>
+    <li><a href="{{ '/conclusion/' | relative_url }}">Conclusion</a></li>
+    <li><a href="{{ '/team/' | relative_url }}">Team</a></li>
+    <li><a href="{{ '/additional-materials/' | relative_url }}">Additional Materials</a></li>
   </ul>
 </nav>
